Fix token buffer indexing

BUG: 415249
BUG: 415463